# Finance-AI-AGENT

./: .gitignore  DEPLOY.md  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
backend/: .env.example  main.py  requirements.txt  test_setup.py
backend/agents/: budget_analyst.py  expense_tracker.py  financial_coach.py  guardrails.py  input_validation.py  orchestrator.py  savings_finder.py
backend/graph/: chat_db.py  graph_builder.py  memory.py  planner_graph.py  state.py
backend/middleware/: auth_middleware.py
backend/models/: __init__.py  llm.py
backend/routers/: auth.py  chat.py  plan.py  transactions.py
backend/services/: agent_runner.py  observability.py  supabase_client.py
backend/tests/: test_agents.py
backend/tools/: anonymizer.py  csv_parser.py  financial_tools.py
data/: sample_transactions.csv
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AuthForm.jsx  MarkdownMessage.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/lib/: api.js  branding.js  config.js  sse.js
frontend/src/pages/: Chat.jsx  Dashboard.jsx  Login.jsx  Plan.jsx  Signup.jsx
test_output/: budget_analyst.txt  expense_tracker.txt  finacial_coach.txt
ui/: app.py
